<resources>
    <string name="app_name">InvUnab</string>
    <string name="bienvenido_a_invunab">Bienvenido a InvUnab</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="ingresa">Ingresa</string>
    <string name="no_est_s_registrado">¿No estás registrado?</string>
    <string name="nombre">Nombre</string>
    <string name="carrera">Carrera</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="ingresa_tu_carrera">Ingresa tu carrera</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="registro">Registro</string>
    <string name="materias">Materias</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_materia">Agregar materia</string>
    <string name="nombre_de_la_materia">Nombre de la materia</string>
    <string name="url_cono">URL ícono</string>
    <string name="ingresa_el_nombre">Ingresa el nombre</string>
    <string name="ingresa_el_url_de_la_imagen">Ingresa el URL de la imagen</string>
    <string name="cancelar">Cancelar</string>
    <string name="publicar">Publicar</string>
    <string name="url_archivo">URL Archivo</string>
    <string name="haz_una_publicaci_n">Haz una publicación</string>
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="ingresa_el_t_tulo_de_la_publicaci_n">Ingresa el título de la publicación</string>
    <string name="ingresa_el_url_del_archivo">Ingresa el URL del archivo</string>
    <string name="ingresa_la_informaci_n">Ingresa la información</string>
    <string name="descargar_archivo">Descargar archivo</string>
    <string name="fecha">Fecha</string>
    <string name="autor">Autor</string>
    <string name="nombre_de_publicacion">Nombre de publicacion</string>
    <string name="ver_archivo">Ver archivo</string>
    <string name="validar_error">Valide el dato</string>
    <string name="url_de_imagen">URL de imagen</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>